6 - Uso do questionador.js

--- a/index.htm
+++ b/index.htm
@@ -8,7 +8,11 @@
   <link rel="stylesheet" href="lib/w3css/w3.css"/>
   <link rel="stylesheet" href="lib/w3css/w3-theme-grey.css"/>
   <link rel="stylesheet" href="css/css.css"/>
-<script src="js/js.js"></script>
+  <!--
+        Vamos utilizar o questionador js no js.js. Então precisamos de uma tag <script> referenciando ao novo arquivo ANTES do js.js. 
+                                    Coloque logo acima da tag <script> abaixo! 
+  -->
+  <script src="js/js.js"></script>
 </head>
 <body onload="apareca();">
   <div id="painel" class="w3-container w3-content">
