10 - Finalizando as perguntas

--- a/index.htm
+++ b/index.htm
@@ -49,6 +49,11 @@
             </fieldset>
         </form>
 	</div>
+    <div id="acabou" class="jq-box w3-card-8 w3-padding">
+        <h1 class="w3-animate-fading">Fim de jogo, <span id="finalJogador"></span>!</h1>
+        <span id="finalPontos" class="w3-badge w3-jumbo w3-blue-grey">0</span>
+        <!--Cara novo por aqui!-->
+    </div>  
   </div>
   <footer class="w3-container w3-blue-grey">
      <p class="w3-large w3-center">Feito por Thiago Paiva</p>
