--- a/index.htm
+++ b/index.htm
@@ -51,7 +51,7 @@
 	</div>
     <div id="acabou" class="jq-box w3-card-8 w3-padding">
         <h1 class="w3-animate-fading">Fim de jogo, <span id="finalJogador"></span>!</h1>
-        <span id="finalPontos" class="w3-badge w3-jumbo w3-blue-grey">0</span>
+        <span id="finalPontos" class="w3-badge w3-xxxlarge w3-padding w3-blue-grey">42</span>
         <!--Cara novo por aqui!-->
     </div>  
   </div>
