--- a/index.htm
+++ b/index.htm
@@ -49,7 +49,7 @@
             </fieldset>
         </form>
 	</div>
-    <div id="acabou" class="jq-box w3-card-8 w3-padding">
+    <div id="acabou" class="jq-box w3-card-8 w3-padding w3-center">
         <h1 class="w3-animate-fading">Fim de jogo, <span id="finalJogador"></span>!</h1>
         <span id="finalPontos" class="w3-badge w3-xxxlarge w3-padding w3-blue-grey">42</span>
         <!--Cara novo por aqui!-->
