--- a/index.htm
+++ b/index.htm
@@ -52,6 +52,7 @@
     <div id="acabou" class="jq-box w3-card-8 w3-padding w3-center">
         <h1 class="w3-animate-fading">Fim de jogo, <span id="finalJogador"></span>!</h1>
         <span id="finalPontos" class="w3-badge w3-xxxlarge w3-padding w3-blue-grey">42</span>
+        <h2 class="jq-dstq w3-tag w3-xlarge w3-padding w3-red">Recordista:<br> <span id="finalRecordista"></span><br><span id="finalRecorde"></span></h2>
         <!--Cara novo por aqui!-->
     </div>  
   </div>
