14 - DESAFIO DA ORDENAÇÃO - CRIANDO UM RANKING!

--- a/index.htm
+++ b/index.htm
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="lib/w3css/w3.css"/>
   <link rel="stylesheet" href="lib/w3css/w3-theme-grey.css"/>
   <link rel="stylesheet" href="css/css.css"/>
+  <script src="js/pontuacoes.js"></script>
   <script src="js/questionador.js"></script>
   <script src="js/js.js"></script>
 </head>
@@ -50,9 +51,9 @@
         </form>
 	</div>
     <div id="acabou" class="jq-box w3-card-8 w3-padding w3-center">
-        <h1 class="w3-animate-fading">Fim de jogo, <span id="finalJogador"></span>!</h1>
+        <h1 class="w3-animate-fading w3-teal">Fim de jogo, <span id="finalJogador"></span>!</h1>
         <span id="finalPontos" class="w3-badge w3-xxxlarge w3-padding w3-blue-grey">42</span>
-        <h2 class="jq-dstq w3-tag w3-xlarge w3-padding w3-red">Recordista:<br> <span id="finalRecordista"></span><br><span id="finalRecorde"></span></h2>
+        <h2 class="jq-dstq w3-tag w3-xlarge w3-padding w3-teal">Recordista:<br> <span id="finalRecordista"></span><br><span id="finalRecorde"></span></h2>
         <!--Cara novo por aqui!-->
     </div>  
   </div>
