Mudança de origem do W3CSS

--- a/index.htm
+++ b/index.htm
@@ -5,8 +5,8 @@
   <title>java-quizz - Seu Jogo de Perguntas e Respostas!</title>
   <meta name="description" content="Jogo de perguntas e respostas">
   <meta name="author" content="Thiago Paiva">
-  <link rel="stylesheet" href="lib/w3css/w3.css"/>
-  <link rel="stylesheet" href="lib/w3css/w3-theme-grey.css"/>
+  <link rel="stylesheet" href="https://www.w3schools.com/lib/w3.css"/>
+  <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-grey.css"/>
   <link rel="stylesheet" href="css/css.css"/>
   <script src="js/pontuacoes.js"></script>
   <script src="js/questionador.js"></script>
